# BwatLibs

./: CMakeLists.txt  README.md
AudioFile/include/: AudioFile.h
PhysX/physx/source/compiler/cmake/linux/: CMakeLists.txt
PhysX/physx/source/compiler/cmake/windows/: CMakeLists.txt
PhysX/physx/source/foundation/include/: PsAllocator.h
PhysX/physx/source/geomutils/src/mesh/: GuBV4Build.cpp
PhysX/physx/source/lowleveldynamics/include/: DyFeatherstoneArticulationUtils.h
dirent/include/: direntWin32.h
json/include/: json.hpp
lua/: CMakeLists.txt
sol2/.github/workflows/: windows.yml
sol2/examples/source/: usertype.constructors.cpp
sol2/single/include/sol/: sol.hpp
sol2/tests/regression_tests/simple/: CMakeLists.txt
sol2/tests/regression_tests/simple/source/: 1067.cpp  main.cpp
